# TopologyCalc

./: .gitignore  LICENSE  README.md  TopologyCalc.cabal
src/: Analysis.hs  Cluster.hs  Connections.hs  Direction.hs  Main.hs  Record.hs  Topology.hs  Tree.hs  Utils.hs
src/Cluster/: Second.hs
src/Connections/: Mash.hs  Ring.hs  Tree.hs
