name: TopologyCalc
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: Calculate the characteristics of the topology of a scalable computer sysytem.
data-dir: ""
 
executable PKS
    build-depends: QuickCheck -any, array -any, base -any, boxes -any,
                   containers -any, matrix -any, parallel -any, vector -any
    main-is: Main.hs
    buildable: True
    extensions: NamedFieldPuns
    hs-source-dirs: src
    other-modules: Connections Record Cluster Utils Topology Analysis
                   Direction Cluster.Second Connections.Tree
 
test-suite test-PKS
    build-depends: QuickCheck -any, array -any, base -any, boxes -any,
                   containers -any, matrix -any, parallel -any, vector -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src