name: TopologyCalc
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description: Calculate the characteristics of the topology of a scalable computer sysytem.
data-dir: ""
 
executable TopologyCalc
    build-depends: QuickCheck -any, array -any, base -any, boxes -any,
                   containers -any, matrix -any, parallel -any, vector -any
    main-is: Main.hs
    buildable: True
    extensions: NamedFieldPuns
    hs-source-dirs: src
    other-modules: Connections.Ring Connections Record Cluster Utils
                   Topology Analysis Direction Connections.Tree
    ghc-options: -Wall -threaded -with-rtsopts=-N
 